namespace HumanDash.Enum;

public enum AvatarState
{
    Idle,
    Jumping,
    Falling,
    Running,
    Sliding
}