namespace HumanDash.Enum;

public enum GameState
{
    Initial,
    Transition,
    Playing,
    GameOver
}