namespace HumanDash.Enum;

public enum TrashSize
{
    Small,
    Medium,
    Large
}